# LogOSMViewer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  POI.h  README.md  cmake_install.cmake  main.cpp
Logs/: 4e7485cfe0c552a50112f33c573dca8c4e174786a59a6e407a589aa6d1d71d7a-2019-04-16_13-08-45.nav-project.csv  ty5OWH3TUHlxTbwZXr3KHBzDTZZpeMVFaTjGrMqNKhpNbsfAKvF0G6pRIap0dkdt-2019-04-16_13-05-04.nav-project.csv
includes/: Definitions.h  LogViewer.h  POI.h
src/: LogViewer.cpp  POI.cpp  main.cpp
