cmake_minimum_required(VERSION 2.8.7)
project(Log)

    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -lstdc++fs")
add_subdirectory(opt)
file(GLOB SOURCES "src/*.cpp")
add_executable(main ${SOURCES})
target_link_libraries(main ${CPR_LIBRARIES} stdc++fs)
include_directories(includes ${CPR_INCLUDE_DIRS} opt/json/single_include/nlohmann)
